manifest/deploy-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:            
        - name: wordpress
          image: pogbia29/mywordpress
          ports:
          - containerPort: 80
          # resources:
          # requests:
          #   memory: 512M
          # limits:
          #   memory: 512M
          volumeMounts:
          - mountPath: /www/var/html
            name: wordpress-contents
      volumes:
      - name: wordpress-contents
        persistentVolumeClaim:
          claimName: wordpress-pvc
      # volumes:
      # - name: wordpress-contents
      #   emptyDir: {}
