manifest/sts-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-sts
spec:
  selector:
    matchLabels:
      app: mysql-sts
  serviceName: mysql-svc-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-sts
    spec:
      containers:
      - name: mysql-sts
        image: pogbia29/mydb_mysql
        ports:
        - containerPort: 8080
        volumes:
        - name: mysql-db
          persistentVolumeClaim:
            claimName: mysql-pvc
