manifest/deploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  tpye: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30113
  selector:
    app: wordpress
