manifest/sts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql-sts
  #clusterIP: None
  ports:
  - name: mysql-svc
    port: 80
    targetPort: 8080
